docs/apim/4.8/SUMMARY.md
# Table of contents

* [Introduction](README.md)
  * [Core Concepts](readme/core-concepts.md)
  * [Enterprise Edition](readme/enterprise-edition.md)
  * [Integrations](readme/integrations.md)
  * [Community Forum](readme/community-forum.md)
  * [Contribute to APIM](readme/contribute-to-apim.md)
* [Getting Started](getting-started/README.md)
  * [Next-Gen Cloud Free Trial](https://eu.cloud.gravitee.io/)
  * [Local Install with Docker](getting-started/local-install-with-docker.md)
  * [Hybrid Install with Docker](getting-started/hybrid-install-with-docker.md)
* [Hybrid Installation & Configuration Guides](hybrid-installation-and-configuration-guides/README.md)
  * [Next-Gen Cloud](hybrid-installation-and-configuration-guides/next-gen-cloud/README.md)
    * [Docker](hybrid-installation-and-configuration-guides/next-gen-cloud/docker/README.md)
      * [Docker CLI](hybrid-installation-and-configuration-guides/next-gen-cloud/docker/docker-cli.md)
      * [Docker Compose](hybrid-installation-and-configuration-guides/next-gen-cloud/docker/docker-compose.md)
    * [Kubernetes](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/README.md)
      * [Vanilla Kubernetes](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/vanilla-kubernetes/README.md)
        * [Deploy a Hybrid Gateway with Redis Sentinel](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/vanilla-kubernetes/deploy-a-hybrid-gateway-with-redis-sentinel.md)
      * [AWS EKS](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/aws-eks.md)
      * [Azure AKS](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/azure-aks.md)
      * [GCP GKE](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/gcp-gke.md)
      * [OpenShift](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/openshift.md)
      * [4.9: OpenShift](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/openshift-1.md)
    * [RPM](hybrid-installation-and-configuration-guides/next-gen-cloud/rpm.md)
    * [.ZIP](hybrid-installation-and-configuration-guides/next-gen-cloud/.zip.md)
    * [Generate a New Cloud Token](hybrid-installation-and-configuration-guides/next-gen-cloud/generate-a-new-cloud-token.md)
    * [Delete a Hybrid Gateway](hybrid-installation-and-configuration-guides/next-gen-cloud/delete-a-hybrid-gateway.md)
    * [Link to a Hybrid Gateway](hybrid-installation-and-configuration-guides/next-gen-cloud/link-to-a-hybrid-gateway.md)
  * [Classic Cloud](hybrid-installation-and-configuration-guides/classic-cloud/README.md)
    * [Docker](hybrid-installation-and-configuration-guides/classic-cloud/docker/README.md)
      * [Docker Compose](hybrid-installation-and-configuration-guides/classic-cloud/docker/docker-compose.md)
      * [Docker CLI](hybrid-installation-and-configuration-guides/classic-cloud/docker/docker-cli.md)
    * [Kubernetes](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/README.md)
      * [Vanilla Kubernetes](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/vanilla-kubernetes.md)
      * [AWS EKS](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/aws-eks.md)
      * [Azure AKS](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/azure-aks.md)
      * [GCP GKE](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/gcp-gke.md)
    * [RPM](hybrid-installation-and-configuration-guides/classic-cloud/rpm.md)
    * [.ZIP](hybrid-installation-and-configuration-guides/classic-cloud/.zip.md)
    * [Cloud Certificate Renewal](hybrid-installation-and-configuration-guides/classic-cloud/cloud-certificate-renewal.md)
* [Self-Hosted Installation Guides](self-hosted-installation-guides/README.md)
  * [Docker](self-hosted-installation-guides/docker/README.md)
    * [Docker Compose](self-hosted-installation-guides/docker/docker-compose.md)
    * [Docker CLI](self-hosted-installation-guides/docker/docker-cli.md)
    * [Customize your Installation](self-hosted-installation-guides/docker/customize-your-installation.md)
  * [Kubernetes](self-hosted-installation-guides/kubernetes/README.md)
    * [Vanilla Kubernetes](self-hosted-installation-guides/kubernetes/vanilla-kubernetes/README.md)
      * [Deploy APIM with Kubernetes Manifest](self-hosted-installation-guides/kubernetes/vanilla-kubernetes/deploy-apim-with-kubernetes-manifest.md)
    * [AWS EKS](self-hosted-installation-guides/kubernetes/aws-eks.md)
    * [Azure AKS](self-hosted-installation-guides/kubernetes/azure-aks.md)
    * [GCP GKE](self-hosted-installation-guides/kubernetes/gcp-gke.md)
    * [OpenShift](self-hosted-installation-guides/kubernetes/openshift.md)
    * [4.9: OpenShift](self-hosted-installation-guides/kubernetes/openshift-1.md)
  * [RPM](self-hosted-installation-guides/rpm/README.md)
    * [Troubleshooting](self-hosted-installation-guides/rpm/troubleshooting.md)
  * [.ZIP](self-hosted-installation-guides/.zip.md)
  * [Multi-tenancy](self-hosted-installation-guides/multi-tenancy.md)
* [Upgrade Guides](upgrade-guides/README.md)
  * [Update the Connection to Cloud](upgrade-guides/update-the-connection-to-cloud.md)
  * [APIM 4.4.+ & Hybrid Gateways](upgrade-guides/apim-4.4.+-and-hybrid-gateways.md)
  * [Upgrade with RPM](upgrade-guides/upgrade-with-rpm.md)
  * [4.9: MongoDB Index Upgrades in APIM 4.9](upgrade-guides/4.9-mongodb-index-upgrades-in-apim-4.9.md)
* [How-To Guides](how-to-guides/README.md)
  * [Create & Publish Your First API](how-to-guides/create-and-publish-your-first-api/README.md)
    * [Create an API](how-to-guides/create-and-publish-your-first-api/create-an-api.md)
    * [Add Security](how-to-guides/create-and-publish-your-first-api/add-security.md)
    * [Add a Policy](how-to-guides/create-and-publish-your-first-api/add-a-policy.md)
    * [Add API Documentation](how-to-guides/create-and-publish-your-first-api/add-api-documentation.md)
    * [Publish your API](how-to-guides/create-and-publish-your-first-api/publish-your-api.md)
  * [Use Case Tutorials](how-to-guides/use-case-tutorials/README.md)
    * [Rate Limit REST APIs](how-to-guides/use-case-tutorials/rate-limit-rest-apis.md)
    * [Configure JWT Security](how-to-guides/use-case-tutorials/configure-jwt-security.md)
    * [Add RBAC to your JWT Plan](how-to-guides/use-case-tutorials/add-rbac-to-your-jwt-plan.md)
    * [Configure DCR](how-to-guides/use-case-tutorials/configure-dcr.md)
    * [Secure and Expose gRPC Services](how-to-guides/use-case-tutorials/secure-and-expose-grpc-services.md)
    * [Expose SOAP Webservices as REST APIs](how-to-guides/use-case-tutorials/expose-soap-webservices-as-rest-apis.md)
    * [Create and Publish an API Using the Management API](how-to-guides/use-case-tutorials/create-and-publish-an-api-using-the-management-api.md)
    * [Create Applications and Subscriptions Using the Management API](how-to-guides/use-case-tutorials/create-applications-and-subscriptions-using-the-management-api.md)
    * [Connect to an Endpoint Using SSE](how-to-guides/use-case-tutorials/connect-to-an-endpoint-using-sse.md)
* [Configure & Manage the Platform](configure-and-manage-the-platform/README.md)
  * [Gravitee Gateway](configure-and-manage-the-platform/gravitee-gateway/README.md)
    * [Proxy](configure-and-manage-the-platform/gravitee-gateway/proxy.md)
    * [Services](configure-and-manage-the-platform/gravitee-gateway/services.md)
    * [Dictionaries](configure-and-manage-the-platform/gravitee-gateway/dictionaries.md)
    * [Alerts](configure-and-manage-the-platform/gravitee-gateway/alerts.md)
    * [Notifications](configure-and-manage-the-platform/gravitee-gateway/notifications.md)
    * [Gateway Internal API](configure-and-manage-the-platform/gravitee-gateway/gateway-internal-api.md)
    * [Sharding Tags](configure-and-manage-the-platform/gravitee-gateway/sharding-tags.md)
    * [Tenants](configure-and-manage-the-platform/gravitee-gateway/tenants.md)
    * [Header IDs](configure-and-manage-the-platform/gravitee-gateway/header-ids.md)
  * [Management API](configure-and-manage-the-platform/management-api/README.md)
    * [MAPI Internal API](configure-and-manage-the-platform/management-api/mapi-internal-api.md)
    * [Settings](configure-and-manage-the-platform/management-api/settings.md)
  * [Manage Organizations & Environments](configure-and-manage-the-platform/manage-organizations-and-environments/README.md)
    * [Authentication](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/README.md)
      * [Gravitee Access Management](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/gravitee-access-management.md)
      * [Authentication Providers](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/authentication-providers.md)
      * [Social Providers](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/social-providers.md)
      * [OpenID Connect](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/openid-connect.md)
      * [Microsoft Entra ID](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/microsoft-entra-id.md)
      * [Roles and Groups Mapping](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/roles-and-groups-mapping.md)
      * [4.9 Roles and Groups Mapping](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/4.9-roles-and-groups-mapping.md)
    * [User Management](configure-and-manage-the-platform/manage-organizations-and-environments/user-management.md)
    * [Applications](configure-and-manage-the-platform/manage-organizations-and-environments/applications.md)
    * [4.9 Applications](configure-and-manage-the-platform/manage-organizations-and-environments/4.9-applications.md)
    * [APIM Console](configure-and-manage-the-platform/manage-organizations-and-environments/apim-console.md)
    * [Developer Portal](configure-and-manage-the-platform/manage-organizations-and-environments/developer-portal.md)
    * [SMTP Configuration](configure-and-manage-the-platform/manage-organizations-and-environments/smtp-configuration.md)
    * [CORS Configuration](configure-and-manage-the-platform/manage-organizations-and-environments/cors-configuration.md)
    * [Support](configure-and-manage-the-platform/manage-organizations-and-environments/support.md)
  * [Debug Logging](configure-and-manage-the-platform/debug-logging.md)
* [Create & Configure APIs](create-and-configure-apis/README.md)
  * [Gravitee API Definitions](create-and-configure-apis/gravitee-api-definitions/README.md)
    * [v2 and v4 API Comparison](create-and-configure-apis/gravitee-api-definitions/v2-and-v4-api-comparison.md)
    * [Execution Engine](create-and-configure-apis/gravitee-api-definitions/execution-engine.md)
  * [Create APIs](create-and-configure-apis/create-apis/README.md)
    * [v4 API Creation Wizard](create-and-configure-apis/create-apis/v4-api-creation-wizard.md)
    * [v2 API Creation Wizard](create-and-configure-apis/create-apis/v2-api-creation-wizard.md)
    * [Import APIs](create-and-configure-apis/create-apis/import-apis.md)
    * [4.9 Migrate APIs](create-and-configure-apis/create-apis/4.9-migrate-apis.md)
    * [Search for APIs in the Console](create-and-configure-apis/create-apis/search-for-apis-in-the-console.md)
    * [4.9 Search for APIs in the Console](create-and-configure-apis/create-apis/4.9-search-for-apis-in-the-console.md)
  * [Configure v4 APIs](create-and-configure-apis/configure-v4-apis/README.md)
    * [General Settings](create-and-configure-apis/configure-v4-apis/general-settings.md)
    * [Entrypoints](create-and-configure-apis/configure-v4-apis/entrypoints/README.md)
      * [HTTP GET](create-and-configure-apis/configure-v4-apis/entrypoints/http-get.md)
      * [HTTP POST](create-and-configure-apis/configure-v4-apis/entrypoints/http-post.md)
      * [Server-Sent Events](create-and-configure-apis/configure-v4-apis/entrypoints/server-sent-events.md)
      * [Webhook](create-and-configure-apis/configure-v4-apis/entrypoints/webhook.md)
      * [WebSocket](create-and-configure-apis/configure-v4-apis/entrypoints/websocket.md)
    * [Endpoints](create-and-configure-apis/configure-v4-apis/endpoints/README.md)
      * [Azure Service Bus](create-and-configure-apis/configure-v4-apis/endpoints/azure-service-bus.md)
      * [Kafka](create-and-configure-apis/configure-v4-apis/endpoints/kafka.md)
      * [Mock](create-and-configure-apis/configure-v4-apis/endpoints/mock.md)
      * [MQTT5](create-and-configure-apis/configure-v4-apis/endpoints/mqtt5.md)
      * [Solace](create-and-configure-apis/configure-v4-apis/endpoints/solace.md)
      * [RabbitMQ](create-and-configure-apis/configure-v4-apis/endpoints/rabbitmq.md)
    * [User Permissions](create-and-configure-apis/configure-v4-apis/user-permissions.md)
    * [Quality of Service](create-and-configure-apis/configure-v4-apis/quality-of-service.md)
    * [Response Templates](create-and-configure-apis/configure-v4-apis/response-templates.md)
    * [CORS](create-and-configure-apis/configure-v4-apis/cors.md)
    * [Health-checks](create-and-configure-apis/configure-v4-apis/health-checks.md)
    * [Documentation](create-and-configure-apis/configure-v4-apis/documentation.md)
    * [Audit Logs](create-and-configure-apis/configure-v4-apis/audit-logs.md)
    * [Version History](create-and-configure-apis/configure-v4-apis/version-history.md)
  * [Configure v2 APIs](create-and-configure-apis/configure-v2-apis/README.md)
    * [General Settings](create-and-configure-apis/configure-v2-apis/general-settings.md)
    * [Proxy Settings](create-and-configure-apis/configure-v2-apis/proxy-settings.md)
    * [Load-balancing, Failover, & Health-checks](create-and-configure-apis/configure-v2-apis/load-balancing-failover-and-health-checks.md)
    * [Service Discovery](create-and-configure-apis/configure-v2-apis/service-discovery.md)
    * [User and Group Access](create-and-configure-apis/configure-v2-apis/user-and-group-access.md)
    * [Documentation](create-and-configure-apis/configure-v2-apis/documentation.md)
  * [Apply Policies](create-and-configure-apis/apply-policies/README.md)
    * [4.9 v4 API Policy Studio](create-and-configure-apis/apply-policies/4.9-v4-api-policy-studio.md)
    * [v4 API Policy Studio](create-and-configure-apis/apply-policies/v4-api-policy-studio.md)
    * [v2 API Policy Studio](create-and-configure-apis/apply-policies/v2-api-policy-studio.md)
    * [Debug Mode](create-and-configure-apis/apply-policies/debug-mode.md)
    * [Shared Policy Groups](create-and-configure-apis/apply-policies/shared-policy-groups.md)
    * [Resources](create-and-configure-apis/apply-policies/resources.md)
    * [Custom Policies](create-and-configure-apis/apply-policies/custom-policies.md)
    * [Policy Reference](create-and-configure-apis/apply-policies/policy-reference/README.md)
      * [Test](create-and-configure-apis/apply-policies/policy-reference/test.md)
      * [AI - Prompt Guard Rails](create-and-configure-apis/apply-policies/policy-reference/ai-prompt-guard-rails.md)
      * [AI - Prompt Token Tracking](create-and-configure-apis/apply-policies/policy-reference/ai-prompt-token-tracking.md)
      * [API Key](create-and-configure-apis/apply-policies/policy-reference/api-key.md)
      * [Assign Attributes](create-and-configure-apis/apply-policies/policy-reference/assign-attributes.md)
      * [Assign Content](create-and-configure-apis/apply-policies/policy-reference/assign-content.md)
      * [Assign Metrics](create-and-configure-apis/apply-policies/policy-reference/assign-metrics.md)
      * [Avro to JSON](create-and-configure-apis/apply-policies/policy-reference/avro-to-json.md)
      * [Avro to Protobuf](create-and-configure-apis/apply-policies/policy-reference/avro-to-protobuf.md)
      * [AWS Lambda](create-and-configure-apis/apply-policies/policy-reference/aws-lambda.md)
      * [Basic Authentication](create-and-configure-apis/apply-policies/policy-reference/basic-authentication.md)
      * [Cache](create-and-configure-apis/apply-policies/policy-reference/cache.md)
      * [Circuit Breaker](create-and-configure-apis/apply-policies/policy-reference/circuit-breaker.md)
      * [CloudEvents](create-and-configure-apis/apply-policies/policy-reference/cloudevents.md)
      * [Custom Query Parameters Parser](create-and-configure-apis/apply-policies/policy-reference/custom-query-parameters-parser.md)
      * [Data Cache](create-and-configure-apis/apply-policies/policy-reference/data-cache.md)
      * [Data Logging Masking](create-and-configure-apis/apply-policies/policy-reference/data-logging-masking.md)
      * [Dynamic Routing](create-and-configure-apis/apply-policies/policy-reference/dynamic-routing.md)
      * [Generate HTTP Signature](create-and-configure-apis/apply-policies/policy-reference/generate-http-signature.md)
      * [Generate JWT](create-and-configure-apis/apply-policies/policy-reference/generate-jwt.md)
      * [GeoIP Filtering](create-and-configure-apis/apply-policies/policy-reference/geoip-filtering.md)
      * [GraphQL Rate Limit](create-and-configure-apis/apply-policies/policy-reference/graphql-rate-limit.md)
      * [Groovy](create-and-configure-apis/apply-policies/policy-reference/groovy.md)
      * [4.9 Groovy](create-and-configure-apis/apply-policies/policy-reference/4.9-groovy.md)
      * [HTML to JSON](create-and-configure-apis/apply-policies/policy-reference/html-to-json.md)
      * [HTTP Callout](create-and-configure-apis/apply-policies/policy-reference/http-callout.md)
      * [HTTP Redirect](create-and-configure-apis/apply-policies/policy-reference/http-redirect.md)
      * [HTTP Signature](create-and-configure-apis/apply-policies/policy-reference/http-signature.md)
      * [InterOPS](create-and-configure-apis/apply-policies/policy-reference/interops.md)
      * [Interrupt](create-and-configure-apis/apply-policies/policy-reference/interrupt.md)
      * [IP Filtering](create-and-configure-apis/apply-policies/policy-reference/ip-filtering.md)
      * [JavaScript](create-and-configure-apis/apply-policies/policy-reference/javascript.md)
      * [JSON to JSON](create-and-configure-apis/apply-policies/policy-reference/json-to-json.md)
      * [JSON to XML](create-and-configure-apis/apply-policies/policy-reference/json-to-xml.md)
      * [JSON Threat Protection](create-and-configure-apis/apply-policies/policy-reference/json-threat-protection.md)
      * [JSON Validation](create-and-configure-apis/apply-policies/policy-reference/json-validation.md)
      * [JWS Validator](create-and-configure-apis/apply-policies/policy-reference/jws-validator.md)
      * [JWT Validator](create-and-configure-apis/apply-policies/policy-reference/jwt-validator.md)
      * [4.9 JWT Validator](create-and-configure-apis/apply-policies/policy-reference/4.9-jwt-validator.md)
      * [Kafka ACL](create-and-configure-apis/apply-policies/policy-reference/kafka-acl.md)
      * [Kafka Message Filtering](create-and-configure-apis/apply-policies/policy-reference/kafka-message-filtering.md)
      * [Kafka Offloading](create-and-configure-apis/apply-policies/policy-reference/kafka-offloading.md)
      * [Kafka Quota](create-and-configure-apis/apply-policies/policy-reference/kafka-quota.md)
      * [Kafka Topic Mapping](create-and-configure-apis/apply-policies/policy-reference/kafka-topic-mapping.md)
      * [Kafka Transform Key](create-and-configure-apis/apply-policies/policy-reference/kafka-transform-key.md)
      * [Keyless](create-and-configure-apis/apply-policies/policy-reference/keyless.md)
      * [Latency](create-and-configure-apis/apply-policies/policy-reference/latency.md)
      * [Maven Archetype](create-and-configure-apis/apply-policies/policy-reference/maven-archetype.md)
      * [Message Filtering](create-and-configure-apis/apply-policies/policy-reference/message-filtering.md)
      * [Metrics Reporter](create-and-configure-apis/apply-policies/policy-reference/metrics-reporter.md)
      * [Mock](create-and-configure-apis/apply-policies/policy-reference/mock.md)
      * [mTLS](create-and-configure-apis/apply-policies/policy-reference/mtls.md)
      * [OAS Validation](create-and-configure-apis/apply-policies/policy-reference/oas-validation.md)
      * [OAuth2](create-and-configure-apis/apply-policies/policy-reference/oauth2/README.md)
        * [Generic OAuth2 Authorization Server](create-and-configure-apis/apply-policies/policy-reference/oauth2/generic-oauth2-authorization-server.md)
        * [Gravitee.io AM Authorization Server](create-and-configure-apis/apply-policies/policy-reference/oauth2/gravitee.io-am-authorization-server.md)
      * [OpenID Connect UserInfo](create-and-configure-apis/apply-policies/policy-reference/openid-connect-userinfo.md)
      * [Override HTTP Method](create-and-configure-apis/apply-policies/policy-reference/override-http-method.md)
      * [Protobuf to JSON](create-and-configure-apis/apply-policies/policy-reference/protobuf-to-json.md)
      * [Rate Limit](create-and-configure-apis/apply-policies/policy-reference/rate-limit.md)
      * [Regex Threat Protection](create-and-configure-apis/apply-policies/policy-reference/regex-threat-protection.md)
      * [Request Content Limit](create-and-configure-apis/apply-policies/policy-reference/request-content-limit.md)
      * [Request Validation](create-and-configure-apis/apply-policies/policy-reference/request-validation.md)
      * [Resource Filtering](create-and-configure-apis/apply-policies/policy-reference/resource-filtering.md)
      * [REST to SOAP](create-and-configure-apis/apply-policies/policy-reference/rest-to-soap.md)
      * [Retry](create-and-configure-apis/apply-policies/policy-reference/retry.md)
      * [Role-based Access Control (RBAC)](create-and-configure-apis/apply-policies/policy-reference/role-based-access-control-rbac.md)
      * [SSL Enforcement](create-and-configure-apis/apply-policies/policy-reference/ssl-enforcement.md)
      * [Status Code Transformation](create-and-configure-apis/apply-policies/policy-reference/status-code-transformation.md)
      * [Template](create-and-configure-apis/apply-policies/policy-reference/template.md)
      * [Traffic Shadowing](create-and-configure-apis/apply-policies/policy-reference/traffic-shadowing.md)
      * [Transform Headers](create-and-configure-apis/apply-policies/policy-reference/transform-headers.md)
      * [Transform Query Parameters](create-and-configure-apis/apply-policies/policy-reference/transform-query-parameters.md)
      * [URL Rewriting](create-and-configure-apis/apply-policies/policy-reference/url-rewriting.md)
      * [WS Security Authentication](create-and-configure-apis/apply-policies/policy-reference/ws-security-authentication.md)
      * [WS Security Sign](create-and-configure-apis/apply-policies/policy-reference/ws-security-sign.md)
      * [XML to JSON](create-and-configure-apis/apply-policies/policy-reference/xml-to-json.md)
      * [XML Threat Protection](create-and-configure-apis/apply-policies/policy-reference/xml-threat-protection.md)
      * [XML Validation](create-and-configure-apis/apply-policies/policy-reference/xml-validation.md)
      * [XSLT](create-and-configure-apis/apply-policies/policy-reference/xslt.md)
* [Secure & Expose APIs](secure-and-expose-apis/README.md)
  * [Plans](secure-and-expose-apis/plans/README.md)
    * [Keyless](secure-and-expose-apis/plans/keyless.md)
    * [API Key](secure-and-expose-apis/plans/api-key.md)
    * [OAuth2](secure-and-expose-apis/plans/oauth2.md)
    * [JWT](secure-and-expose-apis/plans/jwt.md)
    * [Push](secure-and-expose-apis/plans/push.md)
    * [mTLS](secure-and-expose-apis/plans/mtls.md)
  * [Applications](secure-and-expose-apis/applications/README.md)
    * [Create an Application](secure-and-expose-apis/applications/create-an-application.md)
    * [Global Settings](secure-and-expose-apis/applications/global-settings.md)
    * [User and Group Access](secure-and-expose-apis/applications/user-and-group-access.md)
  * [Subscriptions](secure-and-expose-apis/subscriptions/README.md)
    * [Subscription Requests](secure-and-expose-apis/subscriptions/subscription-requests.md)
    * [Manage Subscriptions](secure-and-expose-apis/subscriptions/manage-subscriptions.md)
    * [Transfer Subscriptions](secure-and-expose-apis/subscriptions/transfer-subscriptions.md)
* [Developer Portal](developer-portal/README.md)
  * [New Developer Portal](developer-portal/new-developer-portal/README.md)
    * [Configure the New Portal](developer-portal/new-developer-portal/configure-the-new-portal.md)
    * [Layout and Theme](developer-portal/new-developer-portal/layout-and-theme.md)
    * [4.9: Customize the homepage](developer-portal/new-developer-portal/4.9-customize-the-homepage.md)
    * [4.9 Layout and Theme](developer-portal/new-developer-portal/4.9-layout-and-theme.md)
    * [Application Logs](developer-portal/new-developer-portal/application-logs.md)
    * [Configure Webhook Subscriptions](developer-portal/new-developer-portal/configure-webhook-subscriptions.md)
  * [Classic Developer Portal](developer-portal/classic-developer-portal/README.md)
    * [Configuration File](developer-portal/classic-developer-portal/configuration-file.md)
    * [Portal Settings](developer-portal/classic-developer-portal/portal-settings.md)
    * [Layout and Theme](developer-portal/classic-developer-portal/layout-and-theme.md)
    * [Manage Users](developer-portal/classic-developer-portal/manage-users.md)
    * [Webhook Subscriptions](developer-portal/classic-developer-portal/webhook-subscriptions.md)
    * [Create an Application](developer-portal/classic-developer-portal/create-an-application.md)
    * [API Documentation](developer-portal/classic-developer-portal/api-documentation.md)
* [Govern APIs](govern-apis/README.md)
  * [Federation](govern-apis/federation/README.md)
    * [Integrations](govern-apis/federation/integrations.md)
    * [Discovery](govern-apis/federation/discovery.md)
    * [Federated APIs](govern-apis/federation/federated-apis.md)
    * [Federation Agent Service Account](govern-apis/federation/federation-agent-service-account.md)
    * [3rd-Party Providers](govern-apis/federation/3rd-party-providers/README.md)
      * [Apigee X](govern-apis/federation/3rd-party-providers/apigee-x.md)
      * [AWS API Gateway](govern-apis/federation/3rd-party-providers/aws-api-gateway/README.md)
        * [4.9 Multi-Account and Multi-Region AWS API Gateway Federation](govern-apis/federation/3rd-party-providers/aws-api-gateway/4.9-multi-account-and-multi-region-aws-api-gateway-federation.md)
      * [Azure API Management](govern-apis/federation/3rd-party-providers/azure-api-management.md)
      * [Confluent Platform](govern-apis/federation/3rd-party-providers/confluent-platform.md)
      * [IBM API Connect](govern-apis/federation/3rd-party-providers/ibm-api-connect.md)
      * [Mulesoft Anypoint](govern-apis/federation/3rd-party-providers/mulesoft-anypoint.md)
      * [Solace](govern-apis/federation/3rd-party-providers/solace.md)
      * [4.9 Edge Stack](govern-apis/federation/3rd-party-providers/4.9-edge-stack.md)
  * [API Score](govern-apis/api-score/README.md)
    * [Enable API Score](govern-apis/api-score/enable-api-score.md)
    * [View API Scores](govern-apis/api-score/view-api-scores.md)
    * [Rulesets and Functions](govern-apis/api-score/rulesets-and-functions.md)
    * [Types of Assets](govern-apis/api-score/types-of-assets.md)
* [Analyze & Monitor APIs](analyze-and-monitor-apis/README.md)
  * [4.9 API Proxy Dashboard](analyze-and-monitor-apis/4.9-api-proxy-dashboard.md)
  * [Dashboards](analyze-and-monitor-apis/dashboards.md)
  * [API Quality](analyze-and-monitor-apis/api-quality.md)
  * [Audit Trail](analyze-and-monitor-apis/audit-trail.md)
  * [Reporters](analyze-and-monitor-apis/reporters/README.md)
    * [Elasticsearch Reporter](analyze-and-monitor-apis/reporters/elasticsearch-reporter.md)
    * [File Reporter](analyze-and-monitor-apis/reporters/file-reporter.md)
    * [TCP Reporter](analyze-and-monitor-apis/reporters/tcp-reporter.md)
    * [Datadog Reporter](analyze-and-monitor-apis/reporters/datadog-reporter.md)
  * [Logging](analyze-and-monitor-apis/logging.md)
  * [4.9: Logging](analyze-and-monitor-apis/logging-1.md)
  * [OpenTelemetry](analyze-and-monitor-apis/opentelemetry.md)
  * [4.9 Execution Transparency Analytics](analyze-and-monitor-apis/4.9-execution-transparency-analytics.md)
* [Agent Mesh](agent-mesh/README.md)
  * [Set Up an AI Agent (A2A) Proxy](agent-mesh/create-an-a2a-proxy.md)
  * [Discover and Catalog AI Agents (A2A)](agent-mesh/add-agents-to-your-agent-catalog.md)
  * [Expose Your APIs as AI-Ready Tools with MCP](agent-mesh/convert-your-apis-to-mcp-servers.md)
* [Terraform](terraform/README.md)
  * [Quick Start Guide](terraform/quick-start-guide.md)
  * [Define an APIM service account for Terraform](terraform/define-an-apim-service-account-for-terraform.md)
  * [Gravitee Resources](terraform/example-resource-configurations.md)
* [Kafka Gateway](kafka-gateway/README.md)
  * [Configure the Kafka Client & Gateway](kafka-gateway/configure-the-kafka-client-and-gateway.md)
  * [Deploy a Kafka Gateway with Gravitee Cloud](kafka-gateway/deploy-a-kafka-gateway-with-gravitee-cloud.md)
  * [Produce and Consume Kafka Messages with Gravitee Cloud](kafka-gateway/produce-and-consume-kafka-messages-with-gravitee-cloud.md)
  * [Create & Configure Kafka APIs](kafka-gateway/create-and-configure-kafka-apis/README.md)
    * [Create Kafka APIs](kafka-gateway/create-and-configure-kafka-apis/create-kafka-apis.md)
    * [Configure Kafka APIs](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/README.md)
      * [Configuration](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/configuration.md)
      * [Entrypoints](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/entrypoints.md)
      * [Endpoints](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/endpoints.md)
      * [Policies](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/policies.md)
      * [Consumers](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/consumers.md)
      * [Documentation](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/documentation.md)
      * [Deployment](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/deployment.md)
  * [4.9: Create and Configure Kafka Clusters](kafka-gateway/4.9-create-and-configure-kafka-clusters.md)
  * [Plans](kafka-gateway/plans.md)
  * [Applications](kafka-gateway/applications.md)
  * [Subscriptions](kafka-gateway/subscriptions.md)
  * [Other Ways Gravitee Supports Kafka](kafka-gateway/other-ways-gravitee-supports-kafka.md)
  * [Expose metrics to Prometheus](kafka-gateway/expose-metrics-to-prometheus.md)
  * [4.9: Configure and Deploy Kafka Console](kafka-gateway/4.9-configure-and-deploy-kafka-console.md)
* [Prepare a Production Environment](prepare-a-production-environment/README.md)
  * [Gateway Resource Sizing](prepare-a-production-environment/gateway-resource-sizing-guidelines.md)
  * [Production Best Practices](prepare-a-production-environment/production-best-practices/README.md)
    * [Internal APIs](prepare-a-production-environment/production-best-practices/internal-apis.md)
    * [Deployments](prepare-a-production-environment/production-best-practices/deployments.md)
    * [Authentication](prepare-a-production-environment/production-best-practices/authentication.md)
    * [Protections](prepare-a-production-environment/production-best-practices/protections.md)
    * [General Recommendations](prepare-a-production-environment/production-best-practices/general-recommendations/README.md)
      * [Default APIM Settings](prepare-a-production-environment/production-best-practices/general-recommendations/default-apim-settings.md)
      * [API Design](prepare-a-production-environment/production-best-practices/general-recommendations/api-design.md)
      * [API Review and Quality](prepare-a-production-environment/production-best-practices/general-recommendations/api-review-and-quality.md)
      * [Property Encryption](prepare-a-production-environment/production-best-practices/general-recommendations/property-encryption.md)
      * [Documentation Sanitizer](prepare-a-production-environment/production-best-practices/general-recommendations/documentation-sanitizer.md)
      * [Notifiers](prepare-a-production-environment/production-best-practices/general-recommendations/notifiers.md)
      * [Default Nginx Security Config](prepare-a-production-environment/production-best-practices/general-recommendations/default-nginx-security-config.md)
  * [Cache](prepare-a-production-environment/cache.md)
  * [Repositories](prepare-a-production-environment/repositories/README.md)
    * [MongoDB](prepare-a-production-environment/repositories/mongodb.md)
    * [ElasticSearch](prepare-a-production-environment/repositories/elasticsearch.md)
    * [JDBC](prepare-a-production-environment/repositories/jdbc.md)
    * [Redis](prepare-a-production-environment/repositories/redis.md)
  * [Configure your HTTP Server](prepare-a-production-environment/configure-your-http-server.md)
  * [Sensitive Data Management](prepare-a-production-environment/sensitive-data-management/README.md)
    * [Configure Secrets](prepare-a-production-environment/sensitive-data-management/configure-secrets.md)
    * [Configure Secret Provider Plugins](prepare-a-production-environment/sensitive-data-management/configure-secret-provider-plugins.md)
    * [Apply Secrets to APIs](prepare-a-production-environment/sensitive-data-management/apply-secrets-to-apis.md)
    * [Apply Secrets to Configurations](prepare-a-production-environment/sensitive-data-management/apply-secrets-to-configurations.md)
* [Plugins](plugins/README.md)
  * [Deployment](plugins/deployment.md)
  * [Customization](plugins/customization.md)
* [Gravitee Expression Language](gravitee-expression-language.md)
* [4.9: Gravitee Expression Language](gravitee-expression-language-1.md)
* [Management API Reference](management-api-reference.md)
* [4.9: Expose APIM as an MCP Server](4.9-expose-apim-as-an-mcp-server.md)
* [Release Information](release-information/README.md)
  * [Release Notes](release-information/release-notes/README.md)
    * [APIM 4.8](release-information/release-notes/apim-4.8.md)
    * [APIM 4.7](https://documentation.gravitee.io/apim/4.7/overview/release-notes/apim-4.7)
    * [APIM 4.6](https://documentation.gravitee.io/apim/overview/release-notes/apim-4.6)
    * [APIM 4.5](https://documentation.gravitee.io/apim/4.5/overview/release-notes/apim-4.5)
    * [APIM 4.4](https://documentation.gravitee.io/apim/4.4/overview/release-notes/apim-4.4)
    * [APIM 4.3](https://documentation.gravitee.io/apim/4.3/overview/release-notes/apim-4.3)
    * [APIM 4.2](https://documentation.gravitee.io/apim/4.2/overview/release-notes/apim-4.2)
    * [APIM 4.1](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/release-notes/apim-4.1)
    * [APIM 4.0](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/release-notes/apim-4.0)
  * [Changelog](release-information/changelog/README.md)
    * [APIM 4.8.x](release-information/changelog/apim-4.8.x.md)
    * [APIM 4.7.x](https://documentation.gravitee.io/apim/4.7/overview/changelog/apim-4.7.x)
    * [APIM 4.6.x](https://documentation.gravitee.io/apim/4.6/overview/changelog/apim-4.6.x)
    * [APIM 4.5.x](https://documentation.gravitee.io/apim/4.5/overview/changelog/apim-4.5.x)
    * [APIM 4.4.x](https://documentation.gravitee.io/apim/4.4/overview/release-notes/apim-4.4)
    * [APIM 4.3.x](https://documentation.gravitee.io/apim/4.3/releases-and-changelog/changelog/apim-4.3.x)
    * [APIM 4.2.x](https://documentation.gravitee.io/apim/4.2/overview/changelog/apim-4.2.x)
    * [APIM 4.1.x](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/changelogs/apim-4.1.x-changelog)
    * [APIM 4.0.x](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/changelog/apim-4.0.x)
  * [Breaking Changes and Deprecations](release-information/breaking-changes-and-deprecations.md)
